--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Welcome to cenlinea</title>
+    <title>Welcome to Cenlinea</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -24,7 +24,7 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
     <!--Animation styles-->
-    <link rel="stylesheet" href="css/animations.css">
+    <link href="css/animation.css" rel="stylesheet">
 
 </head>
 
@@ -33,7 +33,7 @@
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
 
     <!-- Navigation -->
-    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+    <!--<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
         <div class="container">
             <div class="navbar-header page-scroll">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
@@ -46,10 +46,10 @@
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse navbar-ex1-collapse">
+            <!--<div class="collapse navbar-collapse navbar-ex1-collapse">
                 <ul class="nav navbar-nav">
                     <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
-                    <li class="hidden">
+                   <!-- <li class="hidden">
                         <a class="page-scroll" href="#page-top"></a>
                     </li>
                     <li>
@@ -64,20 +64,20 @@
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
-        </div>
+        <!--</div>
         <!-- /.container -->
-    </nav>
+    <!--</nav>-->
 
     <!-- Intro Section -->
     <section id="intro" class="intro-section">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                     <a class="btn btn-default page-scroll" href="#about"><img src="images/play-button.png"/></a>
-                     <div class="logo-intro" class="slideUp">
-                                   
-                   
-                </div>
+                     <a class="btn page-scroll" href="#about"><img src="images/play-button.png"/></a>
+                     <div id="logo-intro" class="slide-up">
+                       <img src="images/logo.png"/>
+                       <img src="images/umbrellaguy.png" class="image"/>                           
+                    </div>
             </div>
         </div>
     </section>
