--- a/Games/Speller/index.html
+++ b/Games/Speller/index.html
@@ -1,3 +1,17 @@
+
+<?php
+include_once '../../includes/db_connect.php';
+include_once '../../includes/functions.php';
+include_once '../../includes/register.inc.php';
+ 
+sec_session_start();
+ 
+if (login_check($mysqli) == true) {
+    $logged = 'in';
+} else {
+    $logged = 'out';
+}
+?>
 <!DOCTYPE html>
 <html lang="en">
 	<head>
